# yakthang

./: .gitignore  .gitmodules  CLAUDE.md  Justfile  SETUP.md  THEMING-CHANGES.md  THEMING-VERIFICATION.md  check-workers.sh  cleanup-workers.sh  cost-openclaw.sh  cost-recover.sh  cost-summary.sh  cost-workers.sh  kill-worker.sh  launch.sh  opencode.json  orchestrator.kdl  setup-vm.sh  spawn-worker.sh  yak-map.sh
src/yak-map/: AGENTS.md  Cargo.toml  README.md  plugin.yaml
src/yak-map/src/: lib.rs  main.rs  model.rs  render.rs
src/yaks/: .envrc  .gitignore  .pre-commit-config.yaml.template  .shellspec  Cargo.toml  LICENSE  README.md  demo.tape  devenv.nix  flake.nix  install.sh  prompt.md.template
src/yaks/.claude/: CLAUDE.md
src/yaks/.githooks/: verify-checks
src/yaks/.github/workflows/: lint.yml  mutation.yml  release.yml  test.yml
src/yaks/.pi/prompts/: yx-add.md  yx-go.md  yx-start.md  yx-status.md
src/yaks/completions/: README.md  yx.bash  yx.zsh
src/yaks/docs/: cli-design-philosophy.md
src/yaks/docs/adr/: 0001-migrate-from-bash-to-rust-for-core-implementation.md  0002-adopt-cqrs-and-event-sourcing.md  0004-yak-names-are-leaf-only.md  README.md  (+12 more)
src/yaks/features/: add.feature  cli.feature  color.feature  compact.feature  completion.feature  context.feature  done.feature  field.feature  fuzzy_match.feature  git_checks.feature  identity.feature  list.feature  log.feature  migration.feature  move.feature  prune.feature  rename.feature  reset.feature  rm.feature  show_tags.feature  state.feature  sync.feature  tag.feature
src/yaks/lib/: hello.sh  yaks.sh
src/yaks/src/: README.md  lib.rs  main.rs
src/yaks/tests/: cucumber.rs
(+263 files in other folders)
