[package]
name = "yx"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wynne"]
description = "DAG-based TODO list CLI for software teams"
license = "MIT"
repository = "https://github.com/mattwynne/yaks"

[features]
default = []
test-support = []

[lib]
name = "yx"
path = "src/lib.rs"

[[bin]]
name = "yx"
path = "src/main.rs"

[[test]]
name = "cucumber"
required-features = ["test-support"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
git2 = "0.19"
tempfile = "3.15"
walkdir = "2.5"
libc = "0.2.180"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }
termimad = "0.34"
terminal_size = "0.4"

[dev-dependencies]
tempfile = "3.15"
serial_test = "3.2"
cucumber = "0.21"
tokio = { version = "1", features = ["full"] }
regex = "1"

[lints.rust]
warnings = "deny"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary
panic = "abort"     # Abort on panic (smaller binary)
